--- a/contact.html
+++ b/contact.html
@@ -163,10 +163,16 @@
           </div><a href="mailto:info@smartbeautystudio.com" class="contact-left-section w-inline-block"><img
               src="images/mail.svg" loading="lazy" alt="" class="contact-left-icon" />
             <div>info@smartbeautystudio.com</div>
-          </a><a href="https://www.instagram.com/smartbeauty.studio/" target="_blank"
+          </a>
+          <a href="https://www.instagram.com/smartbeauty.studio/" target="_blank"
             class="contact-left-section w-inline-block"><img src="images/ig.svg" loading="lazy" alt=""
               class="contact-left-icon" />
             <div class="ig-link">@smartbeauty.studio</div>
+          </a>
+          <a href="https://www.youtube.com/@smartbeauty_studio" target="_blank"
+            class="contact-left-section w-inline-block"><img src="images/yt.svg" loading="lazy" alt=""
+              class="contact-left-icon" />
+            <div class="ig-link">@smartbeauty_studio</div>
           </a>
         </div>
         <div id="w-node-_53fd68e0-d3a8-738d-2b64-35ceceeb44f2-d2213161" class="contact-right">
